changes to structure

--- a/configs.cfg
+++ b/configs.cfg
@@ -1,10 +1,7 @@
-d age : 10
+d age : 19
 d name : ajith
-d height : 100
+d height : 99
 d address : 148A 4th main 10th cross bapujinagar bangalore 26
 d salary : 72L
 d designation : Architect
-d weight : 80
-v weight < 100
-v age > 9
-v height < 101\n
+d weight : 99\n
