fix parsing of eof and add type to config and validation statements

--- a/configs.cfg
+++ b/configs.cfg
@@ -1,7 +1,7 @@
-d age : 19
-d name : ajith
-d height : 99
-d address : 148A 4th main 10th cross bapujinagar bangalore 26
-d salary : 72L
-d designation : Architect
-d weight : 99\n
+di age : 19
+ds name : ajith
+di height : 99
+ds address : 148A 4th main 10th cross bapujinagar bangalore 26
+di salary : 72
+ds designation : Architect
+di weight : 99
