--- a/rupaka.cabal
+++ b/rupaka.cabal
@@ -41,6 +41,8 @@ library
     , file-embed
     , optparse-applicative
     , parsec
+    , regex-base
+    , regex-tdfa
     , template-haskell
     , text
   default-language: Haskell2010
@@ -60,6 +62,8 @@ executable rupaka-exe
     , file-embed
     , optparse-applicative
     , parsec
+    , regex-base
+    , regex-tdfa
     , rupaka
     , template-haskell
     , text
