--- a/rupaka.cabal
+++ b/rupaka.cabal
@@ -38,11 +38,14 @@ library
     , base >=4.7 && <5
     , bytestring
     , containers
+    , directory
     , file-embed
+    , hslogger
     , optparse-applicative
     , parsec
     , regex-base
     , regex-tdfa
+    , split
     , template-haskell
     , text
   default-language: Haskell2010
@@ -59,12 +62,15 @@ executable rupaka-exe
     , base >=4.7 && <5
     , bytestring
     , containers
+    , directory
     , file-embed
+    , hslogger
     , optparse-applicative
     , parsec
     , regex-base
     , regex-tdfa
     , rupaka
+    , split
     , template-haskell
     , text
   default-language: Haskell2010
