add array of all types and change the format to be type declarative

--- a/examples/example-1.cfg
+++ b/examples/example-1.cfg
@@ -1,4 +1,4 @@
-ds url : https://ajithnn.com
-db run : True
-ds mode : none
-di age : 32
+str url : https://ajithnn.com
+bool run : True
+str mode : none
+num age : 32.0234
