--- a/examples/example-2.cfg
+++ b/examples/example-2.cfg
@@ -2,6 +2,6 @@ str    url : https://ajithnn.com
 bool   run : True
 str    mode : none
 num    age : 32.0234
-[str]  vegetables : [tomato,potato,ocra,onion]
+[str]  vegetables : [tomato,potato,ocra,onion,radish]
 [num]  ages : [1,2,3,4,5]
 [bool] predicates : [True,False,True,True]
