--- a/package.yaml
+++ b/package.yaml
@@ -25,19 +25,19 @@ dependencies:
 library:
   source-dirs: src
   dependencies: 
-    - template-haskell
     - text
     - parsec
     - containers
-    - file-embed
     - bytestring
-    - aeson
+    - aeson >=1.3 && <1.6
     - optparse-applicative
     - regex-tdfa
     - regex-base
     - split
     - hslogger
     - directory
+    - aeson-gadt-th >= 0.2.5.1
+    - template-haskell
 
 executables:
   rupaka-exe:
@@ -49,19 +49,19 @@ executables:
     - -with-rtsopts=-N
     dependencies:
     - rupaka
-    - template-haskell
     - text
     - parsec
     - containers
-    - file-embed
     - bytestring
-    - aeson
+    - aeson >=1.3 && <1.6
     - optparse-applicative
     - regex-tdfa
     - regex-base
     - split
     - hslogger
     - directory
+    - aeson-gadt-th >= 0.2.5.1
+    - template-haskell
 
 tests:
   rupaka-test:
