--- a/rupaka.cabal
+++ b/rupaka.cabal
@@ -34,12 +34,12 @@ library
   hs-source-dirs:
       src
   build-depends:
-      aeson
+      aeson >=1.3 && <1.6
+    , aeson-gadt-th >=0.2.5.1
     , base >=4.7 && <5
     , bytestring
     , containers
     , directory
-    , file-embed
     , hslogger
     , optparse-applicative
     , parsec
@@ -58,12 +58,12 @@ executable rupaka-exe
       app
   ghc-options: -threaded -rtsopts -with-rtsopts=-N
   build-depends:
-      aeson
+      aeson >=1.3 && <1.6
+    , aeson-gadt-th >=0.2.5.1
     , base >=4.7 && <5
     , bytestring
     , containers
     , directory
-    , file-embed
     , hslogger
     , optparse-applicative
     , parsec
