add array of objects and validations as for each

--- a/examples/example-5.cfg
+++ b/examples/example-5.cfg
@@ -3,6 +3,18 @@ str url : https://asdf.com
 bool run : True
 str mode : none
 num age : 32.0234
+[obj] offices : [
+{
+str location : blr
+str desg : Architect
+str company : amagi
+}
+{
+str location : delhi
+str desg : EM
+str company : amagi
+}
+]
 }
 obj female : {
 str url : https://efgh.com
