--- a/examples/example-4.cfg
+++ b/examples/example-4.cfg
@@ -3,6 +3,10 @@ str url : https://asdf.com
 bool run : True
 str mode : none
 num age : 32.0234
+obj office : {
+str desg : Architect
+str company : amagi
+}
 }
 obj female : {
 str url : https://efgh.com
