--- a/rupaka.cabal
+++ b/rupaka.cabal
@@ -34,8 +34,7 @@ library
   hs-source-dirs:
       src
   build-depends:
-      aeson >=1.3 && <1.6
-    , aeson-gadt-th >=0.2.5.1
+      aeson
     , base >=4.7 && <5
     , bytestring
     , containers
@@ -50,7 +49,7 @@ library
     , text
   default-language: Haskell2010
 
-executable rupaka-exe
+executable rupaka
   main-is: Main.hs
   other-modules:
       Paths_rupaka
@@ -58,8 +57,7 @@ executable rupaka-exe
       app
   ghc-options: -threaded -rtsopts -with-rtsopts=-N
   build-depends:
-      aeson >=1.3 && <1.6
-    , aeson-gadt-th >=0.2.5.1
+      aeson
     , base >=4.7 && <5
     , bytestring
     , containers
