--- a/examples/example-4.cfg
+++ b/examples/example-4.cfg
@@ -5,7 +5,7 @@ str mode : none
 num age : 32.0234
 obj office : {
 str desg : Architect
-str company : amagi
+str company : AMAGI
 }
 }
 obj female : {
