--- a/examples/example-6.cfg
+++ b/examples/example-6.cfg
@@ -7,6 +7,7 @@ obj male : {
         {
             str location : blr
             str desg : Architect
+	    str company: amagi
         }
         {
             str location : delhi
@@ -16,4 +17,5 @@ obj male : {
 }
 str kid : qwerty
 num house : 148
+str female: qwertyyyy
 [num] dimensions : [25.0,51.0,25.0,51.0]
