remove types from cfg and vld files , infer types by values and conditions

--- a/examples/example-1.cfg
+++ b/examples/example-1.cfg
@@ -1,4 +1,4 @@
-str url : https://ajithnn.com
-bool run : True
-str mode : none
-num age : 32.0234
+url : https://ajithnn.com
+run : True
+mode : none
+age : 32.0234
