--- a/examples/example-6.cfg
+++ b/examples/example-6.cfg
@@ -1,21 +1,21 @@
-obj male : {
-    str url : https://asdf.com
-    bool run : True
-    str mode : none
-    num age : 32.0234
-    [obj] offices : [
+male : {
+    url : https://asdf.com
+    run : True
+    mode : none
+    age : 32.0234
+    offices : [
         {
-            str location : blr
-            str desg : Architect
-	    str company: amagi
+            location : blr
+            desg : Architect
+	    company: amagi
         }
         {
-            str location : delhi
-            str desg : EM
+            location : delhi
+            desg : EM
         }
     ]
 }
-str kid : qwerty
-num house : 148
-str female: qwertyyyy
-[num] dimensions : [25.0,51.0,25.0,51.0]
+kid : qwerty
+house : 148
+female: qwertyyyy
+dimensions : [25.0,51.0,25.0,51.0]
