--- a/examples/example-2.cfg
+++ b/examples/example-2.cfg
@@ -1,7 +1,7 @@
-str    url : https://ajithnn.com
-bool   run : True
-str    mode : none
-num    age : 32.0234
-[str]  vegetables : [cabbage,corn,pumpkin]
-[num]  ages : [1,2,3,4,5]
-[bool] predicates : [True,False,True,True]
+url : https://ajithnn.com
+run : True
+mode : none
+age : 32.0234
+vegetables : [cabbage,corn,pumpkin]
+ages : [1,2,3,4,5]
+predicates : [True,False,True,True]
