--- a/examples/example-3.cfg
+++ b/examples/example-3.cfg
@@ -1,15 +1,15 @@
-obj male : {
-    str url : https://asdf.com
-    bool run : True
-    str mode : none
-    num age : 32.0234
+male : {
+   url : https://asdf.com
+   run : True
+   mode : none
+   age : 32.0234
 }
-obj female : {
-    str url : https://efgh.com
-    bool run : True
-    str mode : none
-    num age : 31.0234
+female : {
+   url : https://efgh.com
+   run : True
+   mode : none
+   age : 31.0234
 }
-str kid : qwerty
-num house : 148
-[num] dimensions : [25.0,51.0,25.0,51.0]
+kid : qwerty
+house : 148
+dimensions : [25.0,51.0,25.0,51.0]
