--- a/examples/example-5.cfg
+++ b/examples/example-5.cfg
@@ -1,27 +1,27 @@
-obj male : {
-    str url : https://asdf.com
-    bool run : True
-    str mode : none
-    num age : 32.0234
-    [obj] offices : [
+male : {
+    url : https://asdf.com
+    run : True
+    mode : none
+    age : 32.0234
+    offices : [
         {
-            str location : blr
-            str desg : Architect
-            str company : amagi
+            location : blr
+            desg : Architect
+            company : amagi
         }
         {
-            str location : delhi
-            str desg : EM
-            str company : amagi
+            location : delhi
+            desg : EM
+            company : amagi
         }
     ]
 }
-obj female : {
-    str url : https://efgh.com
-    bool run : True
-    str mode : none
-    num age : 31.0234
+female : {
+    url : https://efgh.com
+    run : True
+    mode : none
+    age : 31.0234
 }
-str kid : qwerty
-num house : 148
-[num] dimensions : [25.0,51.0,25.0,51.0]
+kid : qwerty
+house : 148
+dimensions : [25.0,51.0,25.0,51.0]
